# Embedded-I18n

./: .clang-format  .gitignore  CMakeLists.txt  Generating PO Files.bat  LICENSE  README.md  main.cpp  xml2csv.csv
PO-Convert/: Example.hpp  HeaderFormatter  LocaleOutput.hpp  Locales.py  Struct Generator.py  locale_to_hpp.py  main.py  sample.po
PO-Convert/code_generator/: doxy_generator.py
PO-Convert/locale/: GeneratePOT.bat  main.pot
PO-Convert/po/: main.pot
PO-Convert/po/da_DA/: main_da_DA.po
PO-Convert/po/es_ES/: main_es_ES.po
PO-Convert/po/ja_JA/: main_ja_JA.po
include/: ExampleData.hpp  Languages.hpp
include/E-I18n/: ArchConfig.hpp  GetString.hpp  Locale.hpp  TranslationFormatter.hpp  ei18n.hpp  eternalAdapted.hpp  utfcppAdapted.hpp
include/locales/: da_DK.hpp  en_US.hpp  es_ES.hpp  ja_JP.hpp
po/: main.pot  main_es.po
test/: EternalTestData.hpp  Test_Eternal.cpp  Test_GetString.cpp  Test_GetStringInvalid.cpp  Test_Replace.cpp  Test_StringLength.cpp  UTF8StressTest.hpp
